syntax = "proto3";
package f5.nginx.agent.sdk;
option go_package = "github.com/nginx/agent/sdk/v2/proto;proto";

import "google/protobuf/empty.proto";
import "metrics.proto";
import "events/event.proto";

// Ingester is responsible for ingesting high volume metrics and events
service Ingester {
  // A client-to-server streaming RPC to deliver high volume metrics reports.
  rpc StreamMetricsReport(stream MetricsReport) returns (google.protobuf.Empty) {}

  // A client-to-server streaming RPC to deliver high volume event reports.
  rpc StreamEventReport(stream f5.nginx.agent.sdk.events.EventReport) returns (google.protobuf.Empty) {}
}
